fixing icon layout

--- a/css/style.css
+++ b/css/style.css
@@ -67,19 +67,19 @@
 
 }
 
-.pic {
-
-    
-
-}
-
-
 .courses {
 
     columns: 2;
     -webkit-columns: 2;
     -moz-columns: 2;
 
+}
+
+.contact-links {
+    columns: 3;
+    -webkit-columns: 3;
+    -moz-columns: 3;
+    list-style-type: none;
 }
 
 .experience {
