--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,45 @@
-/* Add a black background color to the top navigation */
+html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Lato', sans-serif;
+    height: 100%;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.Wrap {
+    max-width: 100%;
+    margin: 0 auto;
+}
+
 .navbar {
     width: 100%;
-    background-color: #333;
+    background-color: #5581a570;
     overflow: hidden;
   }
   
   /* Style the links inside the navigation bar */
 .navbar a {
-    width: 25%;
+    width: 20%;
     float: left;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 12px 12px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 /* Change the color of links on hover */
 .navbar a:hover {
-    background-color: rgb(182, 255, 254);
-    color: rgb(0, 0, 0);
+    background-color: #85a5b9ac;
 }
 
 /* Add a color to the active/current link */
@@ -28,113 +48,112 @@
     color: white;
 }
 
-
-/* Ensure proper sizing */
-* {
-    box-sizing: border-box;
+main {
+    width: 100%;
+    background-image: linear-gradient(to bottom, rgba(0, 87, 100, 0.24), rgba(0, 0, 0, 0.14)), url("../images/columbia.JPG");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
+.heading {
+
+    color: white;
+    font-size:larger;
+
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    
+    position: absolute;
+    top: 35%;
+    transform: translateY(-50%);
+}
+
+.background-image {
+    visibility: hidden;
+}
+
+.not_main {
+    background-color: #cceeff; 
+}
+
+.not_main h1 {
+    font-size: xx-large;
+}
 
 .about {
-    margin:2em;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    padding-top: 3%;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    display: grid;
+    grid-template-columns:  56%  40%;
+    column-gap: 4%;
     align-items: center;
-}
-
-.intro {
-
-    margin: auto;
-    -ms-flex: 60%; /* IE10 */
-    flex: 60%;
-    background-color: white;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.profilepic {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    -ms-flex: 40%; /* IE10 */
-    flex: 40%;
-    background-color: white;
-    padding: 20px;
-
 }
 
 .courses {
-
     columns: 2;
-    -webkit-columns: 2;
-    -moz-columns: 2;
-
 }
 
+img {
+    width: 100%;
+    vertical-align: center;
+    height: auto;
+}
 
 .experience {
-    margin:2em;
-    justify-content: center;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .projects {
-    margin:2em;
-    float: center;
     width: 80%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .contact {
-    margin:2em;
-    float: center;
     width: 80%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.contact-links {
-    columns: 3;
-    -webkit-columns: 3;
-    -moz-columns: 3;
-    list-style-type: none;
-}
-
-h2 {
-    margin:0px;
-    padding:2px;
-}
-
-h3 {
-    margin:0;
-    padding:2px;
-    font-weight:normal;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-bottom: 10%;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-    .row {
-      flex-direction: column;
+    .heading {
+        font-size: large;
+        position: absolute;
+        top: 30%;
+        transform: translate(0%, -50%);
     }
-  }
+}
   
-  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-  @media screen and (max-width: 400px) {
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+    .heading {
+        font-size: small;
+        position: absolute;
+        top: 25%;
+        transform: translate(0%, -50%);
+    }
+
+    .about {
+        display: grid;
+        grid-template-columns: 1fr;
+        row-gap: 4%;
+    }
+
+    img {
+        padding-bottom: 10%;
+    }
+
+
     .navbar a {
       float: none;
       width: 100%;
     }
-  }
+}
